lints.workspace = true

[package]
name = "src-filter"
version = "0.27.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project implementing git filters"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"
include = ["src/**/*", "LICENSE-*"]

[lib]
doctest = false

[features]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = ["src-hash/sha1", "src-object/sha1"]

[dependencies]
src-hash = { version = "^0.22.1", path = "../src-hash" }
src-trace = { version = "^0.1.18", path = "../src-trace" }
src-object = { version = "^0.57.0", path = "../src-object" }
src-command = { version = "^0.8.0", path = "../src-command" }
src-quote = { version = "^0.7.0", path = "../src-quote" }
src-utils = { version = "^0.3.1", path = "../src-utils" }
src-path = { version = "^0.11.1", path = "../src-path" }
src-packetline = { version = "^0.21.1", path = "../src-packetline", features = ["blocking-io"] }
src-attributes = { version = "^0.31.0", path = "../src-attributes" }

encoding_rs = "0.8.32"
bstr = { version = "1.12.0", default-features = false, features = ["std"] }
thiserror = "2.0.18"
smallvec = "1.15.1"


[dev-dependencies]
src-quote = { path = "../src-quote" }
src-testtools = { path = "../tests/tools" }
src-worktree = { path = "../src-worktree", default-features = false, features = ["attributes"] }

serial_test = { version = "3.4.0", default-features = false }

[package.metadata.docs.rs]
features = ["sha1"]
