lints.workspace = true

[package]
name = "src-fsck"
version = "0.18.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
authors = ["Cameron Esfahani <cesfahani@gmail.com>", "Sebastian Thiel <sebastian.thiel@icloud.com>"]
license = "MIT OR Apache-2.0"
description = "Verifies the connectivity and validity of objects in the database"
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = false

[features]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = ["src-hash/sha1", "src-hashtable/sha1", "src-object/sha1"]

[dependencies]
src-hash = { version = "^0.22.1", path = "../src-hash" }
src-hashtable = { version = "^0.12.0", path = "../src-hashtable" }
src-object = { version = "^0.57.0", path = "../src-object" }

[dev-dependencies]
src-odb = { path = "../src-odb" }
src-testtools = { path = "../tests/tools" }

[package.metadata.docs.rs]
features = ["sha1"]
