lints.workspace = true

[package]
name = "src-hashtable"
version = "0.12.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate that provides hashtable based data structures optimized to utilize ObjectId keys"
authors = ["Pascal Kuthe <pascal.kuthe@semimod.de>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = false

[features]
## Enable support for the SHA-1 hash by enabling the respective feature in the `src-hash` crate.
sha1 = ["src-hash/sha1"]

[dependencies]
parking_lot = "0.12.4"
hashbrown = { version = "0.16.0", default-features = false, features = ["inline-more"] }
src-hash = { version = "^0.22.0", path = "../src-hash" }

[dev-dependencies]
src-hash = { path = "../src-hash", features = ["sha1"] }

[package.metadata.docs.rs]
features = ["sha1"]
