lints.workspace = true

[package]
name = "src-ignore"
version = "0.19.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing .gitignore files"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "src-glob/serde"]

[dependencies]
src-glob = { version = "^0.24.0", path = "../src-glob" }
src-path = { version = "^0.11.0", path = "../src-path" }
src-trace = { version = "^0.1.16", path = "../src-trace" }

bstr = { version = "1.12.0", default-features = false, features = ["std", "unicode"] }
unicode-bom = { version = "2.0.3" }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

document-features = { version = "0.2.1", optional = true }

[dev-dependencies]
src-testtools = { path = "../tests/tools" }
src-fs = { path = "../src-fs" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]

[package.metadata.cargo-machete]
ignored = [
    # Public optional `serde` feature is retained for downstream feature compatibility.
    "serde",
]
