lints.workspace = true

[package]
name = "src-lock"
version = "21.0.1"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A git-style lock-file implementation"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*", "README.md"]
rust-version = "1.82"

[lib]
doctest = false
test = true

[dependencies]
src-utils = { version = "^0.3.1", default-features = false, path = "../src-utils" }
src-tempfile = { version = "^21.0.0", default-features = false, path = "../src-tempfile" }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.26.0"
