[package]
name = "src-merge"
version = "0.13.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project implementing merge algorithms"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"

[lints]
workspace = true

[lib]
doctest = false

[features]
## Enable support for the SHA-1 hash by enabling the respective feature in the `src-hash` crate.
sha1 = ["src-hash/sha1"]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "src-hash/serde", "src-object/serde"]

[dependencies]
src-hash = { version = "^0.22.1", path = "../src-hash" }
src-object = { version = "^0.57.0", path = "../src-object" }
src-filter = { version = "^0.27.0", path = "../src-filter" }
src-worktree = { version = "^0.49.0", path = "../src-worktree", default-features = false, features = ["attributes"] }
src-command = { version = "^0.8.0", path = "../src-command" }
src-path = { version = "^0.11.1", path = "../src-path" }
src-fs = { version = "^0.19.1", path = "../src-fs" }
src-tempfile = { version = "^21.0.0", path = "../src-tempfile" }
src-trace = { version = "^0.1.18", path = "../src-trace" }
src-quote = { version = "^0.7.0", path = "../src-quote" }
src-revision = { version = "^0.42.0", path = "../src-revision", default-features = false, features = ["merge_base"] }
src-revwalk = { version = "^0.28.0", path = "../src-revwalk" }
src-diff = { version = "^0.60.0", path = "../src-diff", default-features = false, features = ["blob"] }
src-index = { version = "^0.48.0", path = "../src-index" }

thiserror = "2.0.18"
imara-diff = { version = "0.2.0" }
bstr = { version = "1.12.0", default-features = false }
nonempty = "0.12.0"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
src-testtools = { path = "../tests/tools" }
src-odb = { path = "../src-odb" }
src-utils = { path = "../src-utils" }
termtree = "1.0.0"
pretty_assertions = "1.4.0"

[package.metadata.docs.rs]
all-features = true
features = ["sha1", "document-features"]

[package.metadata.cargo-machete]
ignored = [
    # Doc-only macro dependency used under `all(doc, feature = "document-features")`.
    "document-features",
    # Optional `serde` feature is retained for downstream API compatibility.
    "serde",
]
