lints.workspace = true

[package]
name = "src-object"
version = "0.57.0"
description = "Immutable and mutable git objects with decoding and encoding support"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = false

[[bench]]
name = "decode-objects"
harness = false
path = "./benches/decode_objects.rs"

[[bench]]
name = "edit-tree"
harness = false
path = "./benches/edit_tree.rs"


[features]
## Enable support for the SHA-1 hash by enabling the respective feature in the `src-hash` crate.
sha1 = ["src-hash/sha1"]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = [
    "dep:serde",
    "bstr/serde",
    "smallvec/serde",
    "src-hash/serde",
    "src-actor/serde",
]
## When parsing objects by default errors will only be available on the granularity of success or failure, and with the above flag enabled
## details information about the error location will be collected.
## Use it in applications which expect broken or invalid objects or for debugging purposes. Incorrectly formatted objects aren't at all
## common otherwise.
verbose-object-parsing-errors = ["winnow/std"]

[dependencies]
src-features = { version = "^0.46.1", path = "../src-features", features = [
    "progress",
] }
src-hash = { version = "^0.22.1", path = "../src-hash" }
src-hashtable = { version = "^0.12.0", path = "../src-hashtable" }
src-validate = { version = "^0.11.0", path = "../src-validate" }
src-actor = { version = "^0.40.0", path = "../src-actor" }
src-date = { version = "^0.15.0", path = "../src-date" }
src-path = { version = "^0.11.1", path = "../src-path" }
src-utils = { version = "^0.3.1", path = "../src-utils" }

itoa = "1.0.17"
thiserror = "2.0.18"
bstr = { version = "1.12.0", default-features = false, features = [
    "std",
    "unicode",
] }
winnow = { version = "0.7.14", features = ["simd"] }
smallvec = { version = "1.15.1", features = ["write"] }
serde = { version = "1.0.114", optional = true, default-features = false, features = [
    "derive",
] }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
criterion = "0.8.2"
pretty_assertions = "1.0.0"
src-testtools = { path = "../tests/tools" }
src-odb = { path = "../src-odb" }
termtree = "1.0.0"

[package.metadata.docs.rs]
all-features = true
features = ["sha1", "document-features"]
