lints.workspace = true

[package]
name = "src-odb"
version = "0.77.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
license = "MIT OR Apache-2.0"
description = "Implements various git object databases"
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.82"
autotests = false

[lib]
doctest = false

[features]
## Enable support for the SHA-1 hash by enabling the respective feature in the `src-hash` crate.
sha1 = ["src-hash/sha1"]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "src-hash/serde", "src-object/serde", "src-pack/serde"]

[dependencies]
src-features = { version = "^0.46.1", path = "../src-features", features = ["walkdir", "zlib", "crc32"] }
src-hashtable = { version = "^0.12.0", path = "../src-hashtable" }
src-hash = { version = "^0.22.1", path = "../src-hash" }
src-path = { version = "^0.11.1", path = "../src-path" }
src-quote = { version = "^0.7.0", path = "../src-quote" }
src-object = { version = "^0.57.0", path = "../src-object" }
src-pack = { version = "^0.67.0", path = "../src-pack", default-features = false }
src-fs = { version = "^0.19.1", path = "../src-fs" }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

tempfile = "3.26.0"
thiserror = "2.0.18"
parking_lot = { version = "0.12.4" }
arc-swap = "1.8.2"

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
src-hash = { path = "../src-hash", features = ["sha1"] }

[package.metadata.docs.rs]
features = ["sha1", "document-features", "serde"]
