lints.workspace = true

[package]
name = "src-path"
version = "0.11.1"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing paths and their conversions"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = true

[dependencies]
src-trace = { version = "^0.1.18", path = "../src-trace" }
src-validate = { version = "^0.11.0", path = "../src-validate" }
bstr = { version = "1.12.0", default-features = false, features = ["std"] }
thiserror = "2.0.18"

[dev-dependencies]
src-testtools = { path = "../tests/tools" }
serial_test = { version = "3.4.0", default-features = false }

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.62.1", features = [
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }
winreg = "0.55.0"
