lints.workspace = true

[package]
name = "src-prompt"
version = "0.14.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project for handling prompts in the terminal"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*", "README.md"]
rust-version = "1.82"

[lib]
doctest = false

[dependencies]
src-command = { version = "^0.8.0", path = "../src-command" }
src-config-value = { version = "^0.17.1", path = "../src-config-value" }

thiserror = "2.0.18"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.2", features = ["termios"] }
parking_lot = "0.12.4"

[dev-dependencies]
src-testtools = { path = "../tests/tools" }
serial_test = { version = "3.4.0", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "macos"))'.dev-dependencies]
expectrl = "0.8.0"
