lints.workspace = true

[package]
name = "src-refspec"
version = "0.38.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project for parsing and representing refspecs"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*", "README.md"]
rust-version = "1.82"

[lib]
doctest = false

[features]
## Enable support for the SHA-1 hash by enabling the respective feature in the `src-hash` crate.
sha1 = ["src-hash/sha1"]

[dependencies]
src-error = { version = "^0.2.0", path = "../src-error" }
src-revision = { version = "^0.42.0", path = "../src-revision", default-features = false }
src-validate = { version = "^0.11.0", path = "../src-validate" }
src-hash = { version = "^0.22.1", path = "../src-hash" }
src-glob = { version = "^0.24.0", path = "../src-glob" }

bstr = { version = "1.12.0", default-features = false, features = ["std"] }
thiserror = "2.0.18"
smallvec = "1.15.1"

[dev-dependencies]
src-testtools = { path = "../tests/tools" }
insta = "1.46.3"

[package.metadata.docs.rs]
features = ["sha1"]
