lints.workspace = true

[package]
name = "src-revision"
version = "0.42.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing with finding names for revisions and parsing specifications"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*", "README.md"]
rust-version = "1.82"

[lib]
doctest = false

[features]
default = ["describe", "merge_base"]
## Enable support for the SHA-1 hash by enabling the respective feature in the `src-hash` crate.
sha1 = ["src-hash/sha1"]

## `git describe` functionality
describe = ["dep:src-trace", "dep:src-hashtable"]

## `git merge-base` functionality
merge_base = ["dep:src-trace", "dep:bitflags"]

## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "src-hash/serde", "src-object/serde"]

[dependencies]
src-error = { version = "^0.2.0", path = "../src-error" }
src-hash = { version = "^0.22.1", path = "../src-hash" }
src-object = { version = "^0.57.0", path = "../src-object" }
src-date = { version = "^0.15.0", path = "../src-date" }
src-hashtable = { version = "^0.12.0", path = "../src-hashtable", optional = true }
src-revwalk = { version = "^0.28.0", path = "../src-revwalk" }
src-commitgraph = { version = "^0.34.0", path = "../src-commitgraph" }
src-trace = { version = "^0.1.18", path = "../src-trace", optional = true }

bstr = { version = "1.12.0", default-features = false, features = ["std"] }
bitflags = { version = "2", optional = true }
nonempty = "0.12.0"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
document-features = { version = "0.2.1", optional = true }

[dev-dependencies]
insta = "1.46.3"
src-odb = { path = "../src-odb" }
src-testtools = { path = "../tests/tools" }
permutohedron = "0.2.4"

[package.metadata.docs.rs]
all-features = true
features = ["sha1", "document-features"]
